Fixing bug 284825. Future proof our Java plugin finding code. Patch from mike.lei@sun.com, r+sr=jst@mozilla.org